<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/fragment_single_score_date_title"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            android:gravity="start"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="@color/dark_blue"
            android:text="@string/fragment_single_score_games_title"
            android:textSize="16sp"
            android:gravity="end"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="@color/dark_blue"
            android:text="@string/fragment_single_score_win_title"
            android:textSize="16sp"
            android:gravity="end"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="@color/dark_blue"
            android:text="@string/fragment_single_score_lost_title"
            android:textSize="16sp"
            android:gravity="end"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="@color/dark_blue"
            android:text="@string/fragment_single_score_draw_title"
            android:textSize="16sp"
            android:gravity="end"/>
    </LinearLayout>

    <ListView
        android:id="@+id/fragment_single_score_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>