<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="472dp"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="-100dp"
        android:layout_marginEnd="-100dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_circle_backgroung_gradient">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:padding="50dp"
            android:text="@string/activity_choose_site_pick_your_side_title"
            android:textColor="@color/light_purple"
            android:textSize="40sp"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp">
        <ImageView
            android:id="@+id/activity_choose_site_x_sign_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="60dp"
            android:src="@drawable/button_x"
            android:clickable="true"/>
        <ImageView
            android:id="@+id/activity_choose_site_o_sign_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/button_o"
            android:clickable="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp">
        <TextView
            android:id="@+id/activity_choose_site_x_sign_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:textColor="@color/dark_blue"
            android:text="@string/activity_choose_site_first_button"/>
        <TextView
            android:id="@+id/activity_choose_site_o_sign_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/dark_purple"
            android:text="@string/activity_choose_site_second_button"/>
    </LinearLayout>

    <Button
        android:id="@+id/activity_choose_site_start_button"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button"
        android:enabled="false"
        android:text="@string/activity_choose_site_start_button"
        android:textColor="@drawable/button_text_color"/>

    <Button
        android:id="@+id/activity_choose_site_back_button"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button"
        android:text="@string/activity_choose_site_back_button"
        android:textColor="@drawable/button_text_color"
        android:layout_marginBottom="50dp"/>
</LinearLayout>