<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="472dp"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="-100dp"
        android:layout_marginEnd="-100dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_circle_backgroung_gradient">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="315dp"
            android:layout_marginTop="120dp"
            android:padding="50dp"
            android:src="@drawable/logo" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/activity_menu_single_play_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/button"
            android:text="@string/activity_menu_single_play_button"
            android:textColor="@drawable/button_text_color"
            />

        <Button
            android:id="@+id/activity_menu_multiple_play_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/button"
            android:text="@string/activity_menu_multiple_play_button"
            android:textColor="@drawable/button_text_color"/>

        <Button
            android:id="@+id/activity_menu_score_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/button"
            android:text="@string/activity_menu_scores_button"
            android:textColor="@drawable/button_text_color"/>

        <Button
            android:id="@+id/activity_menu_exit_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/button"
            android:text="@string/activity_menu_exit_button"
            android:textColor="@drawable/button_text_color"/>
    </LinearLayout>




</LinearLayout>