<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="472dp"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="-300dp"
        android:layout_marginEnd="-100dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/shape_circle_backgroung_gradient">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:gravity="bottom|center_horizontal"
            android:padding="50dp"
            android:text="@string/activity_scores_title"
            android:textColor="@color/light_purple"
            android:textSize="40sp"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:id="@+id/activity_scores_left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/activity_scores_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:text="@string/activity_scores_single_play_title"/>
        <ImageView
            android:id="@+id/activity_scores_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"/>
    </LinearLayout>

    <pl.pt.tictactoe.view.score.LockableViewPager
        android:id="@+id/activity_scores_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:layout_margin="30dp"
        android:clickable="false"/>

    <Button
        android:id="@+id/activity_scores_return_button"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/activity_scores_return_button"
        android:textColor="@drawable/button_text_color"
        android:background="@drawable/button"
        />


</LinearLayout>